# memory-vibes

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  implementation-plan.md  opencode.json  prompt.md  toolchain-i386.cmake  toolchain-ppc32.cmake
.github/workflows/: ci.yml  release.yml
scripts/: build.sh  run_all_tests.sh  run_medium_tests.sh
specs/: architecture-spec.md  benchmark-spec.md  dependencies-spec.md  hardware-test-lab-spec.md  permission-spec.md  stream-spec.md  system-identifier-spec.md
src/: aligned_alloc.hpp  apu_identifier.hpp  benchmark.hpp  benchmark_result.hpp  csv_output.cpp  csv_output.hpp  gpu_benchmark.hpp  json_output.cpp  json_output.hpp  layout_builder.cpp  layout_builder.hpp  main.cpp  npu_benchmark.hpp  platform_detection.cpp  platform_detection.hpp  platform_dynamic_lib.cpp  platform_dynamic_lib.hpp  runtime_detection.cpp  runtime_detection.hpp  sqlite_input.cpp  sqlite_input.hpp  sqlite_output.cpp  sqlite_output.hpp  ssd_benchmark.hpp  system_info.cpp  system_info.hpp
tests/: test_alignment.cpp  test_alu.cpp  test_apu_identifier.cpp  test_benchmark.cpp  test_csv_output.cpp  test_double.cpp  test_gpu.cu  test_json_output.cpp  test_layout_builder.cpp  test_layout_cli.cpp  test_multithread.cpp  test_npu.cpp  test_platform_detection.cpp  test_runtime_detection.cpp  test_sqlite_input.cpp  test_sqlite_output.cpp  test_ssd_benchmark.cpp  test_system_info.cpp
